--- a/index.html
+++ b/index.html
@@ -185,6 +185,10 @@
         </div>
     </div>
 
+    <div>
+        <p>Prueba para agregar o cambiar algo de la pagina y hacer le desafio complementario.</p>
+    </div>
+
 
     <!--INICIO DE FOOTER-->
     <section class="footer" data-aos=flip-left>
