--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -32,8 +32,7 @@
     <section id="nav-bar">
         <nav class="navbar navbar-expand-lg navbar-light bg-ligth">
             <div class="container-fluid">
-                <i class="logoAuto fad fa-car"></i>
-                <h5>TU<b>AUTO</b></h5>
+                <h5><a href="../index.html">TU<b>AUTO</b></a></h5>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
