--- a/pages/modelos.html
+++ b/pages/modelos.html
@@ -156,31 +156,60 @@
         </div>
     </section>
 
-    <section id="testimonios">
-        <div class="contenedor">
-            <h6 data-data-aos="fade-right">Testimonio Clientes</h6>
-            <div class="testimonials" data-aos="fade-left">
-                <p class="text">Muy copada los asesores de ventas, muy buena la atencion!</p>
-                <img src="../img/cross_img.png" alt="" class="persona">
-                <p class="usario"><b>Alejandro</b></p>
+    <section class="testimonials">
+        <h2>Testimonios</h2>
+        <p>Nuestros clientes que nos recomiendan.</p>
+        <div class="row" data-aos="zoom-in" data-aos-duration="2000">
+            <div class="testimonials-col">
+                <img src="../img/cross_img.png">
+                <div>
+                    <span>Muy copada los asesores de ventas, muy buena la atencion!</span>
+                    <h6>Alejandro Garcia</h6>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
             </div>
 
-            <div class="testimonials" data-aos="fade-right">
-                <p class="text">Me encanto como me atendieron los chicos super recomendables.</p>
-                <img src="../img/cross_img.png" alt="" class="persona">
-                <p class="usario"><b>Fernando<br></b></p>
+            <div class="testimonials-col">
+                <img src="../img/cross_img.png">
+                <div>
+                    <span>Me encanto como me atendieron los chicos super recomendables.</span>
+                    <h6>Juan Francis</h6>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
             </div>
 
-            <div class="testimonials" data-aos="fade-left">
-                <p class="text">Muy buena la atencion, volveria a comprar.</p>
-                <img src="../img/cross_img.png" alt="" class="persona">
-                <p class="usario"><b>Valentin<br></b></p>
+            <div class="testimonials-col">
+                <img src="../img/cross_img.png">
+                <div>
+                    <span>Muy buena la atencion, volveria a comprar.</span>
+                    <h6>Tomas Gonzales</h6>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
             </div>
 
-            <div class="testimonials" data-aos="fade-right">
-                <p class="text">Demasiado bueno los tiempos de respuestas y la atencion.</p>
-                <img src="../img/cross_img.png" alt="" class="persona">
-                <p class="usario"><b>Agusitn</b></p>
+            <div class="testimonials-col">
+                <img src="../img/cross_img.png">
+                <div>
+                    <span>Demasiado bueno los tiempos de respuestas y la atencion.</span>
+                    <h6>Paul Walker</h6>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
             </div>
         </div>
     </section>
