--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -61,45 +61,41 @@
     </section>
 
     <!--INICIO DE CONTENIDO/MAIN-->
-    <div>
-        <section>
+    <h2>¿Quienes somos?</h2>
+    <p class="animacion animate_animated animate_zoomIn">Somos una empresa que se dedica a ser mediador entre el
+        comprador y el vendedor de un vehiculo,
+        ya
+        sea
+        automoviles, motocicletas, lo que sea. Entonces conectamos a personas que quirean comprar o
+        vender
+        su
+        vehiculo y le brindamos opciones de compra y venta.</p>
 
-            <h2 class="animate__animated animate__fadeInDown animacionH1">¿Quiénes Somos?</h2>
-            <p>Somos una empresa que se dedica a ser mediador entre el comprador y el vendedor de un vehiculo,
-                ya
-                sea
-                automoviles, motocicletas, lo que sea. Entonces conectamos a personas que quirean comprar o
-                vender
-                su
-                vehiculo y le brindamos opciones de compra y venta.
-            </p>
-            <h6>Nuestro equipo de trabajo</h6>
-            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="../img/personas.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../img/personas2.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../img/personas3.jpg" class="d-block w-100" alt="...">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+    <section class="about-us">
+        <div class="row" data-aos="zoom-in" data-aos-duration="2000">
+            <div class="about-col">
+                <h6>La mejor empresa de la provincia</h6>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos culpa assumenda at earum eius,
+                    velit aut atque doloremque ratione dolorum soluta sunt doloribus est maiores repudiandae quibusdam
+                    magni voluptates tempore./p>
             </div>
+            <div class="about-col">
+                <img src="../img/nosotros.jpeg">
+            </div>
+        </div>
 
-        </section>
-    </div>
+        <div class="row" data-aos="zoom-in" data-aos-duration="2000">
+            <div class="about-col">
+                <h6>Nuestro Equipo de Vendedores</h6>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quasi totam est quam ab natus
+                    provident, porro voluptas beatae necessitatibus modi aliquam dignissimos labore repellat corrupti
+                    molestiae sint aut voluptates.</p>
+            </div>
+            <div class="about-col">
+                <img src="../img/nosotros2.jpeg">
+            </div>
+        </div>
+    </section>
 
     <!--INICIO DE FOOTER-->
     <section class="footer" data-aos=flip-left>
