--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -77,7 +77,7 @@
                 <h6>La mejor empresa de la provincia</h6>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos culpa assumenda at earum eius,
                     velit aut atque doloremque ratione dolorum soluta sunt doloribus est maiores repudiandae quibusdam
-                    magni voluptates tempore./p>
+                    magni voluptates tempore.</p>
             </div>
             <div class="about-col">
                 <img src="../img/nosotros.jpeg">
