agrege un p en el index

--- a/index.html
+++ b/index.html
@@ -178,6 +178,12 @@
                             para ofrecerle lo
                             mejor a
                             nuestros clientes.</p>
+
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos enim, quas quasi quibusdam
+                            deleniti cumque itaque ad quisquam facilis repellendus quae ex voluptatem? Ipsum quaerat
+                            possimus veritatis voluptas iste nostrum!
+                        </p>
                     </div>
                 </div>
             </div>
