agrego carrusel con 3 imagenes

--- a/index.html
+++ b/index.html
@@ -62,173 +62,174 @@
 
     <!--INICIO DE CONTENIDO/MAIN-->
     <div class="container-fluid">
-        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/carrusel1.jpeg" class="d-block w-100" alt="...">
+                    <img src="img/carrusel1.jpeg" class="d-block w-100" alt="NisanKicks">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/carrusel.jpeg" class="d-block w-100" alt="...">
+                    <img src="img/carrusel.jpeg" class="d-block w-100" alt="autosVarios">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/carrusel2.jpg" class="d-block w-100" alt="...">
+                    <img src="img/carrusel3.jpg" class="d-block w-100" alt="NisanKicksPersona">
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
+    </div>
 
-        <section>
-            <h1 class="animate__animated animate__fadeInDown animacionH1">Compra o vende tu vehículo al mejor precio
-            </h1>
-            <p class="section--parrafo__color">Somos una empresa mediadora entre el comprador y el vendedor o viceversa,
-                donde el servicio que
-                ofrecemos es atraer interesados en comprar o vender un vehículo y ofrecerles distintas opciones del
-                mercado.</p>
-        </section>
+    <section>
+        <h1 class="animate__animated animate__fadeInDown animacionH1">Compra o vende tu vehículo al mejor precio
+        </h1>
+        <p class="section--parrafo__color">Somos una empresa mediadora entre el comprador y el vendedor o viceversa,
+            donde el servicio que
+            ofrecemos es atraer interesados en comprar o vender un vehículo y ofrecerles distintas opciones del
+            mercado.</p>
+    </section>
 
-        <section class="cards">
-            <div class="row">
-                <div class="card" style="width: 18rem;">
-                    <img src="img/argo-sinFondo.png" class="card-img-top" alt="ArgoRojo">
-                    <div class="card-body">
-                        <h3 class="card-title">Fiat Argo</h3>
-                        <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
-                            2.000.000
-                        </p>
-                    </div>
-                </div>
-
-                <div class="card" style="width: 18rem;">
-                    <img src="img/argo-sinFondo.png" class="card-img-top" alt="ArgoRojo">
-                    <div class="card-body">
-                        <h3 class="card-title">Fiat Argo</h3>
-                        <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
-                            2.000.000
-                        </p>
-                    </div>
-                </div>
-
-                <div class="card" style="width: 18rem;">
-                    <img src="img/argo-sinFondo.png" class="card-img-top" alt="ArgoRojo">
-                    <div class="card-body">
-                        <h3 class="card-title">Fiat Argo</h3>
-                        <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
-                            2.000.000
-                        </p>
-                    </div>
+    <section class="cards">
+        <div class="row">
+            <div class="card" style="width: 18rem;">
+                <img src="img/argo-sinFondo.png" class="card-img-top" alt="ArgoRojo">
+                <div class="card-body">
+                    <h3 class="card-title">Fiat Argo</h3>
+                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
+                        2.000.000
+                    </p>
                 </div>
             </div>
-        </section>
 
-        <section class="cards">
-            <div class="row">
-                <div class="card" style="width: 18rem;">
-                    <img src="img/argo-sinFondo.png" class="card-img-top" alt="ArgoRojo">
-                    <div class="card-body">
-                        <h3 class="card-title">Fiat Argo</h3>
-                        <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
-                            2.000.000
-                        </p>
-                    </div>
-                </div>
-
-                <div class="card" style="width: 18rem;">
-                    <img src="img/argo-sinFondo.png" class="card-img-top" alt="ArgoRojo">
-                    <div class="card-body">
-                        <h3 class="card-title">Fiat Argo</h3>
-                        <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
-                            2.000.000
-                        </p>
-                    </div>
-                </div>
-
-                <div class="card" style="width: 18rem;">
-                    <img src="img/argo-sinFondo.png" class="card-img-top" alt="ArgoRojo">
-                    <div class="card-body">
-                        <h3 class="card-title">Fiat Argo</h3>
-                        <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
-                            2.000.000
-                        </p>
-                    </div>
+            <div class="card" style="width: 18rem;">
+                <img src="img/argo-sinFondo.png" class="card-img-top" alt="ArgoRojo">
+                <div class="card-body">
+                    <h3 class="card-title">Fiat Argo</h3>
+                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
+                        2.000.000
+                    </p>
                 </div>
             </div>
-        </section>
 
-
-        <div class="choose ">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="titlepage">
-                            <h6 data-aos=fade-down>¿Por que elegirnos?</h6>
-                            <p data-aos=fade-down> Somos una empresa con mas de 10 años en el rubro de la compra y venta
-                                de
-                                vehículos con mas
-                                de 500 clientes en la provincia de Cordoba</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="choose_box">
-                            <span data-aos=fade-down>01</span>
-                            <p class="text" data-aos=fade-down>Nuestra priodidad siempre son los clientes, asi que
-                                buscamos
-                                que nuestros
-                                clientes puedan
-                                elegir entre varias opciones y no quedarse con una
-                                unica opcion.</p>
-                        </div>
-                    </div>
-                    <div class="col-md-12">
-                        <div class="choose_box">
-                            <span data-aos=fade-down>02</span>
-                            <p class="text" data-aos=fade-down>Buscamos la conformidad del cliente luego de la venta
-                                ofreciendo un servicio de
-                                posventa con
-                                el cliente.</p>
-                        </div>
-                    </div>
-                    <div class="col-md-12">
-                        <div class="choose_box">
-                            <span data-aos=fade-down>03</span>
-                            <p class="text" data-aos=fade-down>Contamos con la red de contactos mas grande de la
-                                provincia
-                                para ofrecerle lo
-                                mejor a
-                                nuestros clientes.</p>
-                        </div>
-                    </div>
+            <div class="card" style="width: 18rem;">
+                <img src="img/argo-sinFondo.png" class="card-img-top" alt="ArgoRojo">
+                <div class="card-body">
+                    <h3 class="card-title">Fiat Argo</h3>
+                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
+                        2.000.000
+                    </p>
                 </div>
             </div>
         </div>
+    </section>
 
-        <!--INICIO DE FOOTER-->
-        <section class="footer" data-aos=flip-left>
-            <h4>Sigamos Conectados</h4>
-            <div class="icons" data-aos=flip-left>
-                <a href="https://web.whatsapp.com/" target="_blank"><i class="logo-redes fab fa-whatsapp"></i></a>
-                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://twitter.com/home?lang=es" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
-                <p id="copy">© Todos los derechos reservados-2021</p>
+    <section class="cards">
+        <div class="row">
+            <div class="card" style="width: 18rem;">
+                <img src="img/argo-sinFondo.png" class="card-img-top" alt="ArgoRojo">
+                <div class="card-body">
+                    <h3 class="card-title">Fiat Argo</h3>
+                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
+                        2.000.000
+                    </p>
+                </div>
             </div>
-        </section>
-        <script>
-            AOS.init();
-        </script>
-        <!--Boostrap JS-->
-        <script src="js/js/bootstrap.js"></script>
+
+            <div class="card" style="width: 18rem;">
+                <img src="img/argo-sinFondo.png" class="card-img-top" alt="ArgoRojo">
+                <div class="card-body">
+                    <h3 class="card-title">Fiat Argo</h3>
+                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
+                        2.000.000
+                    </p>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <img src="img/argo-sinFondo.png" class="card-img-top" alt="ArgoRojo">
+                <div class="card-body">
+                    <h3 class="card-title">Fiat Argo</h3>
+                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
+                        2.000.000
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <div class="choose ">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="titlepage">
+                        <h6 data-aos=fade-down>¿Por que elegirnos?</h6>
+                        <p data-aos=fade-down> Somos una empresa con mas de 10 años en el rubro de la compra y venta
+                            de
+                            vehículos con mas
+                            de 500 clientes en la provincia de Cordoba</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="choose_box">
+                        <span data-aos=fade-down>01</span>
+                        <p class="text" data-aos=fade-down>Nuestra priodidad siempre son los clientes, asi que
+                            buscamos
+                            que nuestros
+                            clientes puedan
+                            elegir entre varias opciones y no quedarse con una
+                            unica opcion.</p>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="choose_box">
+                        <span data-aos=fade-down>02</span>
+                        <p class="text" data-aos=fade-down>Buscamos la conformidad del cliente luego de la venta
+                            ofreciendo un servicio de
+                            posventa con
+                            el cliente.</p>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="choose_box">
+                        <span data-aos=fade-down>03</span>
+                        <p class="text" data-aos=fade-down>Contamos con la red de contactos mas grande de la
+                            provincia
+                            para ofrecerle lo
+                            mejor a
+                            nuestros clientes.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--INICIO DE FOOTER-->
+    <section class="footer" data-aos=flip-left>
+        <h4>Sigamos Conectados</h4>
+        <div class="icons" data-aos=flip-left>
+            <a href="https://web.whatsapp.com/" target="_blank"><i class="logo-redes fab fa-whatsapp"></i></a>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com/home?lang=es" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+            <p id="copy">© Todos los derechos reservados-2021</p>
+        </div>
+    </section>
+    <script>
+        AOS.init();
+    </script>
+    <!--Boostrap JS-->
+    <script src="js/js/bootstrap.js"></script>
 </body>
 
 </html>
