cambio animaciones de los testimonios

--- a/pages/modelos.html
+++ b/pages/modelos.html
@@ -159,7 +159,7 @@
     <section class="testimonials">
         <h2>Testimonios</h2>
         <p>Nuestros clientes que nos recomiendan.</p>
-        <div class="row" data-aos="zoom-in" data-aos-duration="2000">
+        <div class="row" data-aos="flip-right" data-aos-duration="1500">
             <div class="testimonials-col">
                 <img src="../img/cross_img.png">
                 <div>
