Agrego textos a la seccion Nosotros

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -75,9 +75,7 @@
         <div class="row" data-aos="zoom-in" data-aos-duration="2000">
             <div class="about-col">
                 <h6>La mejor empresa de la provincia</h6>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos culpa assumenda at earum eius,
-                    velit aut atque doloremque ratione dolorum soluta sunt doloribus est maiores repudiandae quibusdam
-                    magni voluptates tempore.</p>
+                <p>Contamos con los mejores contactos de nuestra confianza en toda la provincia de Cordoba.</p>
             </div>
             <div class="about-col">
                 <img src="../img/nosotros.jpeg">
@@ -86,10 +84,9 @@
 
         <div class="row" data-aos="zoom-in" data-aos-duration="2000">
             <div class="about-col">
-                <h6>Nuestro Equipo de Vendedores</h6>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quasi totam est quam ab natus
-                    provident, porro voluptas beatae necessitatibus modi aliquam dignissimos labore repellat corrupti
-                    molestiae sint aut voluptates.</p>
+                <h6>Nuestros contactos</h6>
+                <p>Contamos con mas de 20 contactos en toda la provincia de Cordoba que estan dispuestos a ofrecerle lo
+                    mejor a los clientes</p>
             </div>
             <div class="about-col">
                 <img src="../img/nosotros2.jpeg">
