cambio texto en el nostros

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -75,7 +75,8 @@
         <div class="row" data-aos="zoom-in" data-aos-duration="2000">
             <div class="about-col">
                 <h6>La mejor empresa de la provincia</h6>
-                <p>Contamos con los mejores contactos de nuestra confianza en toda la provincia de Cordoba.</p>
+                <p>Buscamos priorizar e escuchar a nuestros clientes para ofrecerles las mejores propuestas y poder
+                    concretar el negocio.</p>
             </div>
             <div class="about-col">
                 <img src="../img/nosotros.jpeg">
@@ -85,7 +86,8 @@
         <div class="row" data-aos="zoom-in" data-aos-duration="2000">
             <div class="about-col">
                 <h6>Nuestros contactos</h6>
-                <p>Contamos con mas de 20 contactos en toda la provincia de Cordoba que estan dispuestos a ofrecerle lo
+                <p>Contamos con mas de 20 contactos en toda la provincia de Cordoba, de nuestra confianza que estan
+                    dispuestos a ofrecerle lo
                     mejor a los clientes</p>
             </div>
             <div class="about-col">
