cambios varios en la pagina

--- a/pages/modelos.html
+++ b/pages/modelos.html
@@ -91,16 +91,13 @@
                     </p>
                 </div>
             </div>
-        </div>
-    </section>
 
-    <section class="cards">
-        <div class="row">
             <div class="card" style="width: 18rem;">
                 <img src="../img/argo-sinFondo.png" class="card-img-top" alt="ArgoRojo">
                 <div class="card-body">
                     <h3 class="card-title">Fiat Argo</h3>
-                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio: 2.000.000
+                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
+                        2.000.000
                     </p>
                 </div>
             </div>
@@ -109,7 +106,8 @@
                 <img src="../img/500-sinFondo.png" class="card-img-top" alt="500Blanco">
                 <div class="card-body">
                     <h3 class="card-title">Fiat 500</h3>
-                    <p class="card-text">Motor: 1.2L <br> Año: 2012KM <br> Kilómetros: 80.000KM <br> Precio: 1.500.000
+                    <p class="card-text">Motor: 1.2L <br> Año: 2012KM <br> Kilómetros: 80.000KM <br> Precio:
+                        1.500.000
                     </p>
                 </div>
             </div>
@@ -118,20 +116,18 @@
                 <img src="../img/argo-sinFondo.png" class="card-img-top" alt="ArgoRojo">
                 <div class="card-body">
                     <h3 class="card-title">Fiat Argo</h3>
-                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio: 2.000.000
+                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
+                        2.000.000
                     </p>
                 </div>
             </div>
-        </div>
-    </section>
 
-    <section class="cards">
-        <div class="row">
             <div class="card" style="width: 18rem;">
                 <img src="../img/argo-sinFondo.png" class="card-img-top" alt="ArgoRojo">
                 <div class="card-body">
                     <h3 class="card-title">Fiat Argo</h3>
-                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio: 2.000.000
+                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
+                        2.000.000
                     </p>
                 </div>
             </div>
@@ -140,7 +136,8 @@
                 <img src="../img/500-sinFondo.png" class="card-img-top" alt="500Blanco">
                 <div class="card-body">
                     <h3 class="card-title">Fiat 500</h3>
-                    <p class="card-text">Motor: 1.2L <br> Año: 2012KM <br> Kilómetros: 80.000KM <br> Precio: 1.500.000
+                    <p class="card-text">Motor: 1.2L <br> Año: 2012KM <br> Kilómetros: 80.000KM <br> Precio:
+                        1.500.000
                     </p>
                 </div>
             </div>
@@ -149,7 +146,8 @@
                 <img src="../img/argo-sinFondo.png" class="card-img-top" alt="ArgoRojo">
                 <div class="card-body">
                     <h3 class="card-title">Fiat Argo</h3>
-                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio: 2.000.000
+                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
+                        2.000.000
                     </p>
                 </div>
             </div>
