--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -43,16 +43,16 @@
                             <a class="nav-link " href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item animate__animated animate__zoomIn animacion2">
-                            <a class="nav-link" href="nosotros.html">Modelos</a>
+                            <a class="nav-link" href="../pages/nosotros.html">Modelos</a>
                         </li>
                         <li class="nav-item animate__animated animate__zoomIn animacion3">
-                            <a class="nav-link" href="novedades.html">Novedades</a>
+                            <a class="nav-link" href="../pages/novedades.html">Novedades</a>
                         </li>
                         <li class="nav-item animate__animated animate__zoomIn animacion4">
                             <a class="nav-link" href="">Nosotros</a>
                         </li>
                         <li class="nav-item animate__animated animate__zoomIn animacion5">
-                            <a class="nav-link" href="contacto.html">Contacto</a>
+                            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
