--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -43,7 +43,7 @@
                             <a class="nav-link " href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item animate__animated animate__zoomIn animacion2">
-                            <a class="nav-link" href="nosotros.html">Modelos</a>
+                            <a class="nav-link" href="modelos.html">Modelos</a>
                         </li>
                         <li class="nav-item animate__animated animate__zoomIn animacion3">
                             <a class="nav-link" href="novedades.html">Novedades</a>
