--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -61,7 +61,7 @@
     </section>
 
     <!--INICIO DE CONTENIDO/MAIN-->
-    <h2>¿Quienes somos?</h2>
+    <h2 class="animate__animated animate__fadeInDown  animacionH1">¿Quienes somos?</h2>
     <p class="animacion animate_animated animate_zoomIn">Somos una empresa que se dedica a ser mediador entre el
         comprador y el vendedor de un vehiculo,
         ya
