--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TuAuto/inicio</title>
-    <link rel="icon" href="img/car_img2.png" type="logoPaginaweb" />
+    <link rel="icon" href="img/argo-azul-removebg-preview.png" type="logoPaginaweb" />
     <meta name="description" content="Encontrá vehiculos usados o 0km">
     <meta name="keywords" content="autos, marcas, agencia de autos, compra, venta, usados, 0km, motos, camionetas ">
     <!--Google Fonts-->
@@ -99,63 +99,61 @@
     <section class="cards">
         <div class="row">
             <div class="card" style="width: 18rem;">
-                <img src="img/argo-sinFondo.png" class="card-img-top" alt="ArgoRojo">
+                <img src="img/estrada.png" class="card-img-top" alt="stradaBlanca">
+                <div class="card-body">
+                    <h3 class="card-title">Fiat Strada</h3>
+                    <p class="card-text">Motor: 1.6 16V <br> Año: 2021 <br> Kilómetros: 0KM <br> Precio:
+                        2.200.000
+                    </p>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <img src="img/argo-azul-removebg-preview.png" class="card-img-top" alt="ArgoAzul">
                 <div class="card-body">
                     <h3 class="card-title">Fiat Argo</h3>
-                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
+                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 2020 <br> Kilómetros: 0KM <br> Precio:
                         2.000.000
                     </p>
                 </div>
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="img/argo-sinFondo.png" class="card-img-top" alt="ArgoRojo">
+                <img src="img/gris-silverstone-mobi.png" class="card-img-top" alt="mobiGris">
                 <div class="card-body">
-                    <h3 class="card-title">Fiat Argo</h3>
-                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
-                        2.000.000
+                    <h3 class="card-title">Fiat Mobi</h3>
+                    <p class="card-text">Motor: 1.0 <br> Año: 2015 <br> Kilómetros: 100.000KM <br> Precio:
+                        1.200.000
                     </p>
                 </div>
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="img/argo-sinFondo.png" class="card-img-top" alt="ArgoRojo">
+                <img src="img/Fiat-500-margen-largo.png" class="card-img-top" alt="fiat500Blanco">
                 <div class="card-body">
-                    <h3 class="card-title">Fiat Argo</h3>
-                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
-                        2.000.000
-                    </p>
-                </div>
-            </div>
-
-
-
-            <div class="card" style="width: 18rem;">
-                <img src="img/argo-sinFondo.png" class="card-img-top" alt="ArgoRojo">
-                <div class="card-body">
-                    <h3 class="card-title">Fiat Argo</h3>
-                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
-                        2.000.000
+                    <h3 class="card-title">Fiat 500</h3>
+                    <p class="card-text">Motor: 1.4 <br> Año: 2014 <br> Kilómetros: 10.000KM <br> Precio:
+                        1.100.000
                     </p>
                 </div>
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="img/argo-sinFondo.png" class="card-img-top" alt="ArgoRojo">
+                <img src="img/fiat tipo.png" class="card-img-top" alt="fiatTipo">
                 <div class="card-body">
-                    <h3 class="card-title">Fiat Argo</h3>
-                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
-                        2.000.000
+                    <h3 class="card-title">Fiat Tipo</h3>
+                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 2018 <br> Kilómetros: 50.000KM <br> Precio:
+                        1.500.000
                     </p>
                 </div>
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="img/argo-sinFondo.png" class="card-img-top" alt="ArgoRojo">
+                <img src="img/TOROSINFONDO.png" class="card-img-top" alt="fiatToro">
                 <div class="card-body">
-                    <h3 class="card-title">Fiat Argo</h3>
-                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
-                        2.000.000
+                    <h3 class="card-title">Fiat Toro</h3>
+                    <p class="card-text">Motor: 2.0 MJET <br> Año: 2020 <br> Kilómetros: 0KM <br> Precio:
+                        2.00.000
                     </p>
                 </div>
             </div>
