--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TuAuto/nosotros</title>
-    <link rel="icon" href="../img/car_img2.png" type="logoPaginaweb" />
+    <link rel="icon" href="../img/argo-azul-removebg-preview.png" type="logoPaginaweb" />
     <meta name="description" content="La mejor consecionaria del mercado y los mejores precios!">
     <meta name="keywords" content="empresa, contactos, usados, 0km, vehículos">
     <!--Google Fonts-->
@@ -63,7 +63,7 @@
     <!--INICIO DE CONTENIDO/MAIN-->
     <h2 class="animate__animated animate__fadeInDown  animacionH1">¿Quienes somos?</h2>
     <p class="animacion animate_animated animate_zoomIn">Somos una empresa que se dedica a ser mediador entre el
-        comprador y el vendedor de un vehiculo,
+        comprador y zel vendedor de un vehiculo,
         ya
         sea
         automoviles, motocicletas, lo que sea. Entonces conectamos a personas que quirean comprar o
