--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TuAuto/contacto</title>
     <meta name="description" content="Tienes una consulta háznoslos saber. ¿conoces donde queda la concesionaria?">
-    <link rel="icon" href="../img/car_img2.png" type="logoPaginaweb" />
+    <link rel="icon" href="../img/argo-azul-removebg-preview.png" type="logoPaginaweb" />
     <meta name="keywords" content="contactanos, llamanos, ubicación, consulta, dudas, las resolvemos">
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
