--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TuAuto/novedades</title>
-    <link rel="icon" href="../img/car_img2.png" type="logoPaginaweb" />
+    <link rel="icon" href="../img/argo-azul-removebg-preview.png" type="logoPaginaweb" />
     <meta name="description" content="Buscabas vehículos usados o nuevos?">
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -65,7 +65,16 @@
     <section class="cards">
         <div class="row">
             <div class="card" style="width: 18rem;">
-                <img src="../img/500-sinFondo.png" class="card-img-top" alt="500Blanco">
+                <img src="../img/fiat tipo.png" class="card-img-top" alt="fiatTipo">
+                <div class="card-body">
+                    <h3 class="card-title">Fiat Tipo</h3>
+                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 2018 <br> Kilómetros: 50.000KM <br> Precio:
+                        1.500.000
+                    </p>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/Fiat-500-margen-largo.png" class="card-img-top" alt="500Blanco">
                 <div class="card-body">
                     <h3 class="card-title">Fiat 500</h3>
                     <p class="card-text">Motor: 1.2L <br> Año: 2012KM <br> Kilometraje: 80.000KM <br> Precio:
@@ -74,49 +83,39 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="../img/500-sinFondo.png" class="card-img-top" alt="500Blanco">
+                <img src="../img/argo-azul-removebg-preview.png" class="card-img-top" alt="argoAzul">
                 <div class="card-body">
-                    <h3 class="card-title">Fiat 500</h3>
-                    <p class="card-text">Motor: 1.2L <br> Año: 2012KM <br> Kilometraje: 80.000KM <br> Precio:
-                        1.500.000
-                    </p>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img src="../img/500-sinFondo.png" class="card-img-top" alt="500Blanco">
-                <div class="card-body">
-                    <h3 class="card-title">Fiat 500</h3>
-                    <p class="card-text">Motor: 1.2L <br> Año: 2012KM <br> Kilometraje: 80.000KM <br> Precio:
-                        1.500.000
+                    <h3 class="card-title">Fiat Argo</h3>
+                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 2020 <br> Kilómetros: 0KM <br> Precio:
+                        2.000.000
                     </p>
                 </div>
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="../img/500-sinFondo.png" class="card-img-top" alt="500Blanco">
+                <img src="../img/gris-silverstone-mobi.png" class="card-img-top" alt="mobiGris">
                 <div class="card-body">
-                    <h3 class="card-title">Fiat 500</h3>
-                    <p class="card-text">Motor: 1.2L <br> Año: 2012KM <br> Kilometraje: 80.000KM <br> Precio:
+                    <h3 class="card-title">Fiat Mobi</h3>
+                    <p class="card-text">Motor: 1.0 <br> Año: 2015 <br> Kilómetros: 100.000KM <br> Precio:
+                        1.200.000
+                    </p>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/fiat tipo.png" class="card-img-top" alt="fiatTipo">
+                <div class="card-body">
+                    <h3 class="card-title">Fiat Tipo</h3>
+                    <p class="card-text">Motor: 1.4 Firefly <br> Año: 2018 <br> Kilómetros: 50.000KM <br> Precio:
                         1.500.000
                     </p>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="../img/500-sinFondo.png" class="card-img-top" alt="500Blanco">
+                <img src="../img/estrada.png" class="card-img-top" alt="stradaBlanca">
                 <div class="card-body">
-                    <h3 class="card-title">Fiat 500</h3>
-                    <p class="card-text">Motor: 1.2L <br> Año: 2012KM <br> Kilometraje: 80.000KM <br> Precio:
-                        1.500.000
-                    </p>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img src="../img/500-sinFondo.png" class="card-img-top" alt="500Blanco">
-                <div class="card-body">
-                    <h3 class="card-title">Fiat 500</h3>
-                    <p class="card-text">Motor: 1.2L <br> Año: 2012KM <br> Kilometraje: 80.000KM <br> Precio:
-                        1.500.000
-                    </p>
+                    <h3 class="card-title">Fiat Strada</h3>
+                    <p class="card-text">Motor: 1.6 16V <br> Año: 2021 <br> Kilómetros: 0KM <br> Precio:
+                        2.200.000 </p>
                 </div>
             </div>
         </div>
