--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
     </div>
 
     <section>
-        <h1 class="animate__animated animate__fadeInDown animacionH1">Compra o vende tu vehículo al mejor precio
-        </h1>
+        <h1 class="animate__animated animate__fadeInDown animacionH1">Compra o vende tu vehículo al mejor precio</h1>
         <p class="section--parrafo__color">Somos una empresa mediadora entre el comprador y el vendedor o viceversa,
             donde el servicio que
             ofrecemos es atraer interesados en comprar o vender un vehículo y ofrecerles distintas opciones del
-            mercado.</p>
+            mercado.
+        </p>
     </section>
 
     <section class="cards">
@@ -109,7 +109,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="img/argo-azul-removebg-preview.png" class="card-img-top" alt="ArgoAzul">
+                <img src="img/argo-azul-removebg-preview.png" class="card-img-top" alt="argoAzul">
                 <div class="card-body">
                     <h3 class="card-title">Fiat Argo</h3>
                     <p class="card-text">Motor: 1.4 Firefly <br> Año: 2020 <br> Kilómetros: 0KM <br> Precio:
@@ -166,11 +166,12 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="titlepage">
-                        <h6 data-aos=fade-down>¿Por que elegirnos?</h6>
+                        <h6 data-aos=fade-down>¿Por qué elegirnos?</h6>
                         <p data-aos=fade-down> Somos una empresa con mas de 10 años en el rubro de la compra y venta
                             de
                             vehículos con mas
-                            de 500 clientes en la provincia de Cordoba</p>
+                            de 500 clientes en la provincia de Córdoba
+                        </p>
                     </div>
                 </div>
             </div>
@@ -178,12 +179,13 @@
                 <div class="col-md-12">
                     <div class="choose_box">
                         <span data-aos=fade-down>01</span>
-                        <p class="text" data-aos=fade-down>Nuestra priodidad siempre son los clientes, asi que
+                        <p class="text" data-aos=fade-down>Nuestra prioridad siempre son los clientes, así que
                             buscamos
                             que nuestros
                             clientes puedan
                             elegir entre varias opciones y no quedarse con una
-                            unica opcion.</p>
+                            única opción.
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-12">
@@ -192,9 +194,11 @@
                         <p class="text" data-aos=fade-down>Buscamos la conformidad del cliente luego de la venta
                             ofreciendo un servicio de
                             posventa con
-                            el cliente.</p>
+                            el cliente.
+                        </p>
                     </div>
                 </div>
+
                 <div class="col-md-12">
                     <div class="choose_box">
                         <span data-aos=fade-down>03</span>
@@ -202,7 +206,8 @@
                             provincia
                             para ofrecerle lo
                             mejor a
-                            nuestros clientes.</p>
+                            nuestros clientes.
+                        </p>
                     </div>
                 </div>
             </div>
