--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -75,7 +75,7 @@
         <div class="row" data-aos="zoom-in" data-aos-duration="2000">
             <div class="about-col">
                 <h6>La mejor empresa de la provincia</h6>
-                <p>Buscamos priorizar e escuchar a nuestros clientes para ofrecerles las mejores propuestas y poder
+                <p>Buscamos priorizar y escuchar a nuestros clientes para ofrecerles las mejores propuestas y poder
                     concretar el negocio.</p>
             </div>
             <div class="about-col">
