--- a/pages/modelos.html
+++ b/pages/modelos.html
@@ -98,15 +98,6 @@
                 <div class="card-body">
                     <h3 class="card-title">Fiat Strada</h3>
                     <p class="card-text">Motor: 1.6 16V <br> Año: 2021 <br> Kilómetros: 0KM <br> Precio:
-                        2.200.000 </p>
-                </div>
-            </div>
-
-            <div class="card" style="width: 18rem;">
-                <img src="../img/estrada.png" class="card-img-top" alt="estradaBlanca">
-                <div class="card-body">
-                    <h3 class="card-title">Fiat Strada</h3>
-                    <p class="card-text">Motor: 1.6 16V <br> Año: 2021 <br> Kilómetros: 0KM <br> Precio:
                         2.200.000
                     </p>
                 </div>
@@ -123,7 +114,17 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="../img/argo-azul-removebg-preview.png" class="card-img-top" alt="ArgoAzul">
+                <img src="../img/estrada.png" class="card-img-top" alt="estradaBlanca">
+                <div class="card-body">
+                    <h3 class="card-title">Fiat Strada</h3>
+                    <p class="card-text">Motor: 1.6 16V <br> Año: 2021 <br> Kilómetros: 0KM <br> Precio:
+                        2.200.000
+                    </p>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <img src="../img/argo-azul-removebg-preview.png" class="card-img-top" alt="argoAzul">
                 <div class="card-body">
                     <h3 class="card-title">Fiat Argo</h3>
                     <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
@@ -133,7 +134,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="../img/argo-azul-removebg-preview.png" class="card-img-top" alt="ArgoAzul">
+                <img src="../img/argo-azul-removebg-preview.png" class="card-img-top" alt="argoAzul">
                 <div class="card-body">
                     <h3 class="card-title">Fiat Argo</h3>
                     <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
@@ -143,7 +144,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="../img/argo-azul-removebg-preview.png" class="card-img-top" alt="ArgoAzul">
+                <img src="../img/argo-azul-removebg-preview.png" class="card-img-top" alt="argoAzul">
                 <div class="card-body">
                     <h3 class="card-title">Fiat Argo</h3>
                     <p class="card-text">Motor: 1.4 Firefly <br> Año: 0KM <br> Kilómetros: 100KM <br> Precio:
@@ -218,7 +219,7 @@
             <div class="testimonials-col">
                 <img src="../img/cross_img.png">
                 <div>
-                    <span>Muy copada los asesores de ventas, muy buena la atencion!</span>
+                    <span>Muy copada los asesores de ventas, muy buena la atención!</span>
                     <h6>Alejandro Garcia</h6>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -244,7 +245,7 @@
             <div class="testimonials-col">
                 <img src="../img/cross_img.png">
                 <div>
-                    <span>Muy buena la atencion, volveria a comprar.</span>
+                    <span>Muy buena la atención, volvería a comprar.</span>
                     <h6>Tomas Gonzales</h6>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -257,7 +258,7 @@
             <div class="testimonials-col">
                 <img src="../img/cross_img.png">
                 <div>
-                    <span>Demasiado bueno los tiempos de respuestas y la atencion.</span>
+                    <span>Demasiado bueno los tiempos de respuestas y la atención.</span>
                     <h6>Paul Walker</h6>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
